--- a/src/components/myComponents/Hero.astro
+++ b/src/components/myComponents/Hero.astro
@@ -18,7 +18,6 @@ const iconTools = ["astro", "react", "javascript", "typescript", "tailwindcss"];
   <span
     class="inline-flex items-center justify-center font-medium gap-2 py-2 px-3 sm:px-4 text-xs sm:text-sm rounded-full shadow-lg backdrop-blur-md border bg-white/80 border-gray-200/50 text-gray-900"
     aria-label="Innovamos y creamos soluciones digitales"
-    data-aos="fade-down"
   >
     <span class="relative flex h-2 w-2">
       <span
@@ -108,10 +107,7 @@ const iconTools = ["astro", "react", "javascript", "typescript", "tailwindcss"];
   </div>
 
   <!-- Footer con iconos -->
-  <footer
-    class="my-7 flex justify-center items-center gap-4"
-    data-aos="fade-in"
-  >
+  <footer class="my-7 flex justify-center items-center gap-4">
     {
       iconTools.map((icon) => (
         <Icon
