--- a/src/components/myComponents/Projects.astro
+++ b/src/components/myComponents/Projects.astro
@@ -3,7 +3,7 @@ import { myProjects } from "@data/myProjects";
 import { MyCarousel } from "./MyCarousel.tsx";
 ---
 
-<section id="projects" class="snap-start py-16">
+<section id="projects" class="snap-start">
   <header class="px-4 mx-auto text-center max-w-[90%] laptop:max-w-[85%]">
     <div
       class="bg-alx-100 inline-flex items-center justify-center font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none py-2 px-3 rounded-full uppercase overflow-hidden gap-2 sm:px-4 text-xs sm:text-sm transition-all duration-300 text-alx-900"
