--- a/src/components/myComponents/Services.astro
+++ b/src/components/myComponents/Services.astro
@@ -8,7 +8,7 @@ import ContainerCenter from "./ContainerCenter.astro";
 <section
   id="services"
   aria-labelledby="services-title"
-  class="flex justify-center items-center text-center bg-white"
+  class="flex justify-center items-center py-16 text-center bg-white"
 >
   <ContainerCenter>
     <header class="flex flex-col items-center text-center mb-8">
@@ -19,7 +19,7 @@ import ContainerCenter from "./ContainerCenter.astro";
       </div>
       <h2
         id="services-title"
-        class="text-4xl font-bold mt-4 tablet:text-4xl laptop:text-5xl"
+        class="text-4xl mt-3 tablet:text-4xl laptop:text-5xl font-extrabold mb-3 tracking-tight"
       >
         Soluciones digitales hechas para destacar
       </h2>
