--- a/src/components/myComponents/ExperienceSection.astro
+++ b/src/components/myComponents/ExperienceSection.astro
@@ -9,7 +9,7 @@ import CardExperience from "./CardExperience.astro";
   class="text-center py-16 min-h-screen mx-auto max-w-[90%] laptop:max-w-[85%] flex flex-col tablet:flex-row snap-y snap-mandatory"
 >
   <!-- Lado izquierdo: encabezado -->
-  <aside class="w-full tablet:w-[40%] tablet:pr-2 mb-8 tablet:mb-0">
+  <aside class="w-full tablet:w-[40%] tablet:pr-2 tablet:mb-0">
     <header
       class="sticky top-0 z-40 bg-white py-4 tablet:top-[20%] tablet:text-start"
     >
@@ -21,9 +21,10 @@ import CardExperience from "./CardExperience.astro";
       </div>
 
       <!-- Título principal -->
+
       <h2
         id="experiencia-title"
-        class="mt-4 text-3xl tablet:text-4xl laptop:text-5xl font-bold leading-tight text-gray-900"
+        class="text-4xl font-extrabold mt-3 tracking-tight tablet:text-4xl laptop:text-5xl"
       >
         Experiencia digital con propósito
       </h2>
