--- a/src/components/myComponents/Hero.astro
+++ b/src/components/myComponents/Hero.astro
@@ -42,7 +42,9 @@ const iconTools = ["astro", "react", "javascript", "typescript", "tailwindcss"];
     class="text-4xl tablet:text-6xl desktop:text-7xl font-bold tracking-tight mt-6 mb-1 text-gray-900"
   >
     Hola, soy
-    <span class="inline-flex items-center gap-2">
+    <span
+      class="inline-flex items-center gap-2 font-extrabold mb-3 tracking-tight"
+    >
       Alexis
       <Icon
         name="cap"
@@ -56,7 +58,7 @@ const iconTools = ["astro", "react", "javascript", "typescript", "tailwindcss"];
 
   <!-- Subtítulo con gradiente ligero -->
   <h2
-    class="mb-6 text-2xl sm:text-3xl md:text-4xl font-bold bg-gradient-to-r from-neutral-900 via-slate-500 to-neutral-500 bg-clip-text text-transparent leading-tight"
+    class="mb-6 text-2xl sm:text-3xl md:text-4xl tracking-tight font-bold bg-gradient-to-r from-neutral-900 via-slate-500 to-alx-500 bg-clip-text text-transparent leading-tight"
   >
     Frontend Developer
   </h2>
