--- a/src/components/myComponents/Contact.astro
+++ b/src/components/myComponents/Contact.astro
@@ -10,11 +10,11 @@ import { twMerge } from "tailwind-merge";
   class="px-4 py-16 bg-gray-50 text-gray-900 flex justify-center items-center"
   aria-labelledby="contacto-titulo"
 >
-  <ContainerCenter class="w-full max-w-5xl">
+  <ContainerCenter class="laptop:max-w-4xl">
     <header class="mb-10 text-center px-2">
       <h2
         id="contacto-titulo"
-        class="text-4xl mt-3 tablet:text-4xl laptop:text-5xl font-extrabold mb-3 tracking-tight"
+        class="text-4xl mt-3 tablet:text-4xl laptop:text-6xl font-extrabold mb-3 tracking-tight"
       >
         ¿Listo para conectar?
       </h2>
