--- a/src/components/myComponents/Projects.astro
+++ b/src/components/myComponents/Projects.astro
@@ -16,7 +16,7 @@ import { MyCarousel } from "./MyCarousel.tsx";
     </p>
     <h2
       id="projects-title"
-      class="text-4xl mt-3 tablet:text-4xl laptop:text-5xl font-extrabold mb-3 tracking-tight"
+      class="text-3xl font-extrabold mt-3 tracking-tight tablet:text-4xl laptop:text-6xl"
     >
       Zona de commits visuales
     </h2>
