--- a/src/components/myComponents/Services.astro
+++ b/src/components/myComponents/Services.astro
@@ -19,7 +19,7 @@ import ContainerCenter from "./ContainerCenter.astro";
       </div>
       <h2
         id="services-title"
-        class="text-4xl mt-3 tablet:text-4xl laptop:text-5xl font-extrabold mb-3 tracking-tight"
+        class="text-3xl font-extrabold mt-3 tracking-tight tablet:text-4xl laptop:text-6xl"
       >
         Soluciones digitales hechas para destacar
       </h2>
