--- a/src/components/myComponents/ExperienceSection.astro
+++ b/src/components/myComponents/ExperienceSection.astro
@@ -1,44 +1,47 @@
 ---
 import { experience } from "@data/myExperience";
 import CardExperience from "./CardExperience.astro";
+import ContainerCenter from "./ContainerCenter.astro";
 ---
 
 <section
   id="experiencia"
   aria-labelledby="experiencia-title"
-  class="text-center py-16 min-h-screen mx-auto max-w-[90%] laptop:max-w-[85%] flex flex-col tablet:flex-row snap-y snap-mandatory"
+  class="text-center py-6 flex justify-center items-center bg-white"
 >
-  <!-- Lado izquierdo: encabezado -->
-  <aside class="w-full tablet:w-[40%] tablet:pr-2 tablet:mb-0">
-    <header
-      class="sticky top-0 z-40 bg-white py-4 tablet:top-[20%] tablet:text-start"
-    >
-      <!-- Pill de sección -->
-      <div
-        class="bg-alx-100 inline-flex items-center justify-center font-medium w-fit text-xs sm:text-sm text-alx-900 rounded-full px-3 py-2 gap-2 uppercase shadow-sm"
+  <ContainerCenter class="flex flex-col tablet:flex-row laptop:gap-4">
+    <!-- Lado izquierdo: encabezado -->
+    <aside class="w-full tablet:w-[40%] tablet:mb-0">
+      <header
+        class="sticky top-0 z-40 bg-white py-4 tablet:top-[20%] tablet:text-start"
       >
-        Estrategia + Diseño + Tecnología
+        <!-- Pill de sección -->
+        <div
+          class="bg-alx-100 inline-flex items-center justify-center font-medium w-fit text-xs sm:text-sm text-alx-900 rounded-full px-3 py-2 gap-2 uppercase shadow-sm"
+        >
+          Estrategia + Diseño + Tecnología
+        </div>
+
+        <!-- Título principal -->
+
+        <h2
+          id="experiencia-title"
+          class="text-3xl font-extrabold mt-3 tracking-tight tablet:text-4xl laptop:text-6xl"
+        >
+          Experiencia digital con propósito
+        </h2>
+      </header>
+    </aside>
+
+    <!-- Lado derecho: cards -->
+    <aside class="tablet:w-[60%] relative">
+      <div class="space-y-8 w-full">
+        {
+          experience.map((exp, index) => (
+            <CardExperience exp={exp} numberProject={index + 1} />
+          ))
+        }
       </div>
-
-      <!-- Título principal -->
-
-      <h2
-        id="experiencia-title"
-        class="text-4xl font-extrabold mt-3 tracking-tight tablet:text-4xl laptop:text-5xl"
-      >
-        Experiencia digital con propósito
-      </h2>
-    </header>
-  </aside>
-
-  <!-- Lado derecho: cards -->
-  <aside class="tablet:w-[60%] relative">
-    <div class="space-y-8 w-full">
-      {
-        experience.map((exp, index) => (
-          <CardExperience exp={exp} numberProject={index + 1} />
-        ))
-      }
-    </div>
-  </aside>
+    </aside>
+  </ContainerCenter>
 </section>
