--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,7 @@ import BannerFacebook from "@components/myComponents/BannerFacebook.astro";
 import Contact from "@components/myComponents/Contact.astro";
 import Footer from "@components/myComponents/Footer.astro";
 import BannerMessage from "@components/myComponents/BannerMessage.astro";
+import Stack from "@components/myComponents/Stack.astro";
 ---
 
 <Layout>
@@ -22,6 +23,7 @@ import BannerMessage from "@components/myComponents/BannerMessage.astro";
   <Projects />
   <BannerMessage />
   <Services />
+  <Stack />
   <Contact />
   <BannerFacebook />
   <Footer />
