Add SVG icons for Firebase, Git, MySQL, Node.js, React Router, and Vite
- Added firebase.svg icon
- Added git.svg icon
- Added mysql.svg icon
- Added node.svg icon
- Added reactrouter.svg icon
- Added vite.svg icon

--- a/src/components/myComponents/Services.astro
+++ b/src/components/myComponents/Services.astro
@@ -9,7 +9,7 @@ import MyTitle from "./MyTitle.astro";
 <section
   id="services"
   aria-labelledby="services-title"
-  class="flex justify-center items-center py-16 text-center bg-white"
+  class="flex justify-center items-center text-center bg-white"
 >
   <ContainerCenter>
     <header class="flex flex-col items-center text-center mb-8">
