--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,6 +23,7 @@ import Stack from "@components/myComponents/Stack.astro";
   <Projects />
   <BannerMessage />
   <Services />
+  <AutomaticCarouselFade />
   <Stack />
   <Contact />
   <BannerFacebook />
